--- a/package.json
+++ b/package.json
@@ -8,14 +8,18 @@
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview",
-    "server": "json-server --watch ./src/data/cities.json --port 8000 -delay 500"
+    "server": "json-server --watch ./src/data/cities.json --port 8000 --delay 500"
   },
   "dependencies": {
     "eslint-config-react-app": "^7.0.1",
+    "leaflet": "^1.9.4",
+    "moment": "^2.29.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.11.0",
+    "react-leaflet": "^4.2.1",
     "react-router-dom": "^6.17.0",
+    "react-spinners": "^0.13.8",
     "vite-plugin-eslint": "^1.8.1"
   },
   "devDependencies": {
